--- a/WebsiteAboutSneks/Views/Contact/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Contact/Index.cshtml
@@ -4,16 +4,16 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Contact Us</h2>
 <div class="jumbotron" style="background-image:url(https://wallpaper-house.com/data/out/9/wallpaper2you_295356.jpg); max-width:100%;min-height:300px"></div>
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Rattlesnake Way<br />
+    Slytherin, SN<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    555.555.5555
 </address>
 
 <address>
