Snake images, controller, views

--- a/WebsiteAboutSneks/Content/Site.css
+++ b/WebsiteAboutSneks/Content/Site.css
@@ -21,6 +21,13 @@ textarea {
     max-width: 280px;
 }
 
+.img-show{
+    max-height: 300px;
+}
+
+.show-container{
+    margin-top: 75px;
+}
 /*----------------------------------Home Page Styles------------------------------------------*/
 .bg-home {
     /* The image used */
