--- a/WebsiteAboutSneks/Content/Site.css
+++ b/WebsiteAboutSneks/Content/Site.css
@@ -55,7 +55,7 @@ textarea {
     left: 50%;
     transform: translate(-50%, -20%);
     z-index: 2;
-    height: 30%;
+    min-width: 300px;
     width: 48%;
     padding: 20px;
     text-align: center;
