--- a/WebsiteAboutSneks/Views/Contact/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Contact/Index.cshtml
@@ -4,12 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-<div class="jumbotron" style="background-image:url(https://wallpaper-house.com/data/out/9/wallpaper2you_295356.jpg); max-width:100%;min-height:300px"></div>
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
+<div class="jumbotron" style="background-image:url(https://wallpaper-house.com/data/out/9/wallpaper2you_295356.jpg); max-width:100%;min-height:300px"></div>
+
+<!--<address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
@@ -19,7 +17,8 @@
 <address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+</address>-->
+<h2>Contact us below</h2>
 
 <div class="jumbotron">
     @using (Html.BeginForm())
@@ -32,14 +31,14 @@
         </p>
         <p>
             Subject: @Html.DropDownListFor(x => x.Subject, new[]
-                {new SelectListItem()
-                {Text = "Questions about snakes", Value="1"},
-                new SelectListItem()
-                {Text = "My snake story", Value ="2"},
-                new SelectListItem()
-                {Text = "Snake Care", Value ="3"},
-                new SelectListItem()
-                { Text = "Other", Value = "4" } }, "Choose a subject")
+       {new SelectListItem()
+       {Text = "Questions about snakes", Value="1"},
+       new SelectListItem()
+       {Text = "My snake story", Value ="2"},
+       new SelectListItem()
+       {Text = "Snake Care", Value ="3"},
+       new SelectListItem()
+       { Text = "Other", Value = "4" } }, "Choose a subject")
         </p>
         <p>Message: @Html.TextAreaFor(x => x.Message, 10, 40, htmlAttributes: new { placeholder = "Message...", style = "width: 100%; max-width: 100%;" })</p>
 
