--- a/WebsiteAboutSneks/Views/Home/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Home/Index.cshtml
@@ -8,8 +8,10 @@
 <body class="bg-home">
     <div class="bg-text">
         <h1>
-            <b>snake</br>
-            <i>/snāk/</i></b>
+            <b>
+                snake</br>
+                <i>/snāk/</i>
+            </b>
         </h1>
         <h2 class="subtitle">
             Discover more about these fascinating creatures.
