--- a/WebsiteAboutSneks/Views/About/Index.cshtml
+++ b/WebsiteAboutSneks/Views/About/Index.cshtml
@@ -27,7 +27,7 @@
 
     <div class="col-md-4">
 
-        <img src="https://www.naturalworldpets.co.uk/wp-content/uploads/2016/05/Corn_snake-968x656.jpg"  style="width:300px; height:300px; display: block;
+        <img src="https://www.naturalworldpets.co.uk/wp-content/uploads/2016/05/Corn_snake-968x656.jpg" class="img-thumbnail" style="width:300px; height:300px; display: block;
     margin-left: auto;
     margin-right: auto;
    " />
@@ -36,7 +36,7 @@
 
     <div class="col-md-4">
 
-        <img src="https://www.sciencedaily.com/images/2016/08/160816182620_1_540x360.jpg" style="width:300px; height:300px; height:300px; display: block;
+        <img src="https://www.sciencedaily.com/images/2016/08/160816182620_1_540x360.jpg" class="img-thumbnail" style="width:300px; height:300px; height:300px; display: block;
     margin-left: auto;
     margin-right: auto;
     " />
@@ -45,7 +45,7 @@
 
     <div class="col-md-4">
 
-        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/701/save-penis-from-rattlesnake-1495715809.jpg?resize=480:*" style="width:300px; height:300px; height:300px; display: block;
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/701/save-penis-from-rattlesnake-1495715809.jpg?resize=480:*" class="img-thumbnail" style="width:300px; height:300px; height:300px; display: block;
     margin-left: auto;
     margin-right: auto;
     " />
