--- a/WebsiteAboutSneks/Content/Site.css
+++ b/WebsiteAboutSneks/Content/Site.css
@@ -57,15 +57,15 @@ textarea {
     color: white;
     font-weight: bold;
     border: 3px solid #f1f1f1;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -20%);
+    /*transform: translate(-50%, -20%);*/
     z-index: 2;
     min-width: 300px;
     width: 48%;
     padding: 20px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
 }
 
 .center {
