--- a/WebsiteAboutSneks/Views/Shared/_Layout.cshtml
+++ b/WebsiteAboutSneks/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar">About</span>
                     <span class="icon-bar">Contact</span>
                 </button>
-                @Html.ActionLink("Snek Website", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Snek Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <div class="navbar-nav">
@@ -34,7 +34,6 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
         <footer>
             <p>&copy; Team Snek -- 2018</p>
         </footer>
