--- a/WebsiteAboutSneks/Views/Home/Snakes.cshtml
+++ b/WebsiteAboutSneks/Views/Home/Snakes.cshtml
@@ -6,10 +6,15 @@
 
 <h2>All Our Snakes</h2>
 
-<ul>
-    @foreach (Snake snek in ViewBag.SnakeList)
-    {
-        <li><a href="@Url.Action("ShowSnake", "Home", new { id = snek.snakeID })">@snek.snakeName</a></li>
-    }
-</ul>
+<p>Mouse over the button to open the dropdown menu of snakes.</p>
+
+<div class="dropdown">
+    <button class="dropbtn">Snakes</button>
+    <div class="dropdown-content">
+        @foreach (Snake snek in ViewBag.SnakeList)
+        {
+            <a href="@Url.Action("ShowSnake", "Home", new { id = snek.snakeID })">@snek.snakeName</a>
+        }
+    </div>
+</div>
 
