--- a/WebsiteAboutSneks/Content/Site.css
+++ b/WebsiteAboutSneks/Content/Site.css
@@ -4,6 +4,26 @@ body {
     padding-bottom: 20px;
 }
 
+p{
+    font-size: 20px;
+}
+
+.about-text {
+    border-radius: 25px;
+    border: 2px solid gray;
+    padding: 20px;
+    width: 100%;
+}
+
+.about-img {
+    width: 300px;
+    height: 300px;
+    height: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 body, html {
     height: 100%;
 }
