--- a/WebsiteAboutSneks/Views/Home/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <i>/snāk/</i></b>
         </h1>
         <h2 class="subtitle">
-            Discover more about these fascinating creatures.
+            "Every great story seems to begin with a snake."<br> ~Nicholas Cage
         </h2>
     </div>
 </body>
