Updated to community

--- a/WebsiteAboutSneks/Views/Home/Snakes.cshtml
+++ b/WebsiteAboutSneks/Views/Home/Snakes.cshtml
@@ -7,7 +7,7 @@
 @Html.ActionLink("Home", "Index", "Home")
 > <span>Snakes</span>
 
-<h2>Our Snakes</h2>
+<h2>Our Snake Community</h2>
 
 <div class="container">
     <div class="row">
