Snakes list layout

--- a/WebsiteAboutSneks/Views/Home/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <i>/snāk/</i></b>
         </h1>
         <h2 class="subtitle">
-            "Every great story seems to begin with a snake."<br> ~Nicholas Cage
+            Discover more about our snake community.
         </h2>
     </div>
 </body>
