question form: and changes

--- a/WebsiteAboutSneks/Views/Contact/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Contact/Index.cshtml
@@ -8,17 +8,17 @@
 <div class="jumbotron" style="background-image:url(https://wallpaper-house.com/data/out/9/wallpaper2you_295356.jpg); max-width:100%;min-height:300px"></div>
 @Html.ActionLink("Home", "Index", "Home")
 > <span>Contact</span>
-<!--<address>
-    One Microsoft Way<br />
+</br>
+<address>
+    Slytherin Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    555.555.5555
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>-->
+    <strong>Snake Team:</strong>   <a href="mailto:Support@example.com">Snake@Snek.com</a><br />
+</address>
 <h2>Contact us below</h2>
 
 <div class="jumbotron">
