--- a/WebsiteAboutSneks/Views/About/Index.cshtml
+++ b/WebsiteAboutSneks/Views/About/Index.cshtml
@@ -28,19 +28,19 @@
 
     <div class="col-md-4">
 
-        <img src="https://www.naturalworldpets.co.uk/wp-content/uploads/2016/05/Corn_snake-968x656.jpg" class="about-img" />
+        <img src="https://www.naturalworldpets.co.uk/wp-content/uploads/2016/05/Corn_snake-968x656.jpg" class="about-img img-thumbnail" />
 
     </div>
 
     <div class="col-md-4">
 
-        <img src="https://www.sciencedaily.com/images/2016/08/160816182620_1_540x360.jpg" class="about-img" />
+        <img src="https://www.sciencedaily.com/images/2016/08/160816182620_1_540x360.jpg" class="about-img img-thumbnail" />
 
     </div>
 
     <div class="col-md-4">
 
-        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/701/save-penis-from-rattlesnake-1495715809.jpg?resize=480:*" class="about-img" />
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/701/save-penis-from-rattlesnake-1495715809.jpg?resize=480:*" class="about-img img-thumbnail" />
 
     </div>
 
