--- a/WebsiteAboutSneks/Views/Home/ShowSnake.cshtml
+++ b/WebsiteAboutSneks/Views/Home/ShowSnake.cshtml
@@ -3,7 +3,7 @@
     <style>
         textarea {
             width: 150px;
-            min-width:75%;
+            min-width: 75%;
             height: 100px;
             padding: 12px 20px;
             box-sizing: border-box;
@@ -33,6 +33,8 @@
         @:> <span>@snek.snakeName</span>
 
 
+
+
         <div class="container show-container">
             <div class="row">
                 <div class="col-md-5">
@@ -53,8 +55,19 @@
                 <h2>Got questions about @snek.snakeName?</h2>
                 <p>Name: <input type="text" name="Name" placeholder="John Smith"></p>
                 <textarea placeholder="I have a question..."></textarea>
+                <p></p>
+                <button>Submit</button>
             </form>
         </div>
+        <h2>Frequesntly Asked Questions about @snek.snakeName</h2>
+        <div class="jumbotron">
+            <h3>John Smith</h3>
+            <p>What is @snek.snakeName's favorite food? </p>
+            <button>Reply</button>
+        </div>
+        
+
+
     }
 }
 
