Fixing Confirmation functionality

--- a/WebsiteAboutSneks/Views/Contact/Confirmation.cshtml
+++ b/WebsiteAboutSneks/Views/Contact/Confirmation.cshtml
@@ -5,7 +5,7 @@
 }
 
 @Html.ActionLink("Home", "Index", "Home")
-@:> @Html.ActionLink("Contact", "Index", "Contact")
+@Html.ActionLink("Contact", "Index", "Contact")
 > <span>Confirmation</span>
 
 <h2>Confirmation</h2>
