Adding log in page and authentication

--- a/WebsiteAboutSneks/Views/Shared/_Layout.cshtml
+++ b/WebsiteAboutSneks/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                         <li>@Html.ActionLink("Snakes", "Snakes", "Home")</li>
                         <li>@Html.ActionLink("About", "Index", "About")</li>
                         <li>@Html.ActionLink("Contact", "Index", "Contact")</li>
+                        <li>@Html.ActionLink("Login", "Login", "Home")</li>
                     </ul>
                 </div>
             </div>
