--- a/WebsiteAboutSneks/Views/Home/ShowSnake.cshtml
+++ b/WebsiteAboutSneks/Views/Home/ShowSnake.cshtml
@@ -17,6 +17,7 @@
     </style>
 </head>
 @{
+    int icount=0;
     if (Model == null)
     {
         <h2>Uh oh!</h2>
@@ -57,17 +58,14 @@
             <button>Reply</button>
         </div>-->
 
+        <h1>Questions about @Model.SnakeName:</h1>
         <div class="">
-            @foreach (var question in ViewBag.Questions)
+            @foreach (var answer in ViewBag.Answers)
             {
-                <h3>@question.QuestionText</h3>
-                @foreach(var answer in ViewBag.Answers)
-                {
-                    if(answer.QuestionID == question.QuestionID)
-                    {
-                        <p>@answer.AnswerText</p>
-                    }
-                }
+                icount++;
+
+                <h3>@icount. @answer.Questions.QuestionText</h3>
+                <p>A: @answer.AnswerText</p>
             }
         </div>
 
