--- a/WebsiteAboutSneks/Views/Questions/Details.cshtml
+++ b/WebsiteAboutSneks/Views/Questions/Details.cshtml
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.QuestionsID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.QuestionID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
