--- a/WebsiteAboutSneks/Views/Questions/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Questions/Index.cshtml
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.QuestionText)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.QuestionsID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.QuestionsID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.QuestionsID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.QuestionID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.QuestionID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.QuestionID })
         </td>
     </tr>
 }
