Adding in authentication redirected to index page

--- a/WebsiteAboutSneks/Views/Home/Login.cshtml
+++ b/WebsiteAboutSneks/Views/Home/Login.cshtml
@@ -4,11 +4,23 @@
 
 <h2>Login</h2>
 
-@using (Html.BeginForm("Login", "Home", FormMethod.Post))
-{
-    <label for="inputEmail">Email address</label>
-    @Html.TextBox("Email address")
-    <label for="inputPassword">Password</label>
-    @Html.Password("Password")
-    <button type="submit">Login</button>
-}
+<div class="jumbotron">
+    @using (Html.BeginForm("Login", "Home", FormMethod.Post))
+    {
+        <label for="inputEmail">Email address</label>
+        @Html.TextBox("Email address")
+
+        <br />
+
+        <label for="inputPassword">Password</label>
+        @Html.Password("Password")
+
+        <br />
+
+        <button type="submit">Login</button>
+    }
+
+    <br />
+
+    New User? <a href="~/Users/Create">Create New User Account</a>
+</div>
