--- a/WebsiteAboutSneks/Views/Snakes/Delete.cshtml
+++ b/WebsiteAboutSneks/Views/Snakes/Delete.cshtml
@@ -51,6 +51,14 @@
             @Html.DisplayFor(model => model.SnakeTalk)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.SnakePicture)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SnakePicture)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
