--- a/WebsiteAboutSneks/Views/Snakes/Index.cshtml
+++ b/WebsiteAboutSneks/Views/Snakes/Index.cshtml
@@ -26,6 +26,9 @@
         <th>
             @Html.DisplayNameFor(model => model.SnakeTalk)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.SnakePicture)
+        </th>
         <th></th>
     </tr>
 
@@ -45,6 +48,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.SnakeTalk)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.SnakePicture)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.SnakeID }) |
