--- a/WebsiteAboutSneks/Views/Answers/Edit.cshtml
+++ b/WebsiteAboutSneks/Views/Answers/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.AnswerID)
 
-        <div class="form-group">
+        <div class="form-group hidden">
             @Html.LabelFor(model => model.QuestionID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.QuestionID, new { htmlAttributes = new { @class = "form-control" } })
@@ -40,10 +40,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
