--- a/WebsiteAboutSneks/Views/Snakes/Create.cshtml
+++ b/WebsiteAboutSneks/Views/Snakes/Create.cshtml
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SnakePicture, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor("Link to Picture", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SnakePicture, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SnakePicture, "", new { @class = "text-danger" })
